update logo icon and title

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="image" property="og:image" content="./assets/portfolio0.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Omar's Portfolio" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <title>Eng O.Salem</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap"
       rel="stylesheet"
